[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-fabric-bar"
version = "0.0.1"
requires-python = ">= 3.11"
authors = []
maintainers = []
description = "Fabric using Nix example."
readme = "README.md"
license = { file = "LICENSE" }

[project.scripts]
fabric-config = "fabric_config.main:main"

[tool.setuptools.packages]
find = { namespaces = true }

[tool.setuptools.package-data]
"fabric_config.style" = ["**"]
"fabric_config.assets" = ["**"]
